syntax = "proto3";

package virsh;

option go_package = "github.com/Maruqes/512SvMan/api/proto/virsh;proto";

//get cpu features
message Empty {
}

message GetCpuFeaturesResponse {
  repeated string features = 1;
}


message CreateVmRequest{
  string name = 1;
  int32 memory = 2;
  int32 vcpu = 3;
  string disk_path = 4;
  int32 disk_sizeGB = 5;
  string iso_path = 6;
  string network = 7;
  string VNC_password = 8;
}

message OkResponse {
  bool ok = 1;
  string message = 2;
}

enum VmState {
  UNKNOWN = 0;
  RUNNING = 1;
  BLOCKED = 2;
  PAUSED = 3;
  SHUTDOWN = 4;
  SHUTOFF = 5;
  CRASHED = 6;
  PMSUSPENDED = 7;
  NOSTATE = 8;
}

message Vm{
  string name = 1;
  VmState state = 2;
  string novncPort = 3;
  int32 cpuCount = 4;
  int32 memoryMB = 5;
  int32 currentCpuUsage = 6;
  int32 currentMemoryUsageMB = 7;
}

message GetVmByNameRequest {
  string name = 1;
}

message GetAllVmsResponse {
  repeated Vm vms = 1;
}

//defines on slave
service SlaveVirshService {
  rpc GetCpuFeatures(Empty) returns (GetCpuFeaturesResponse);

  rpc CreateVm(CreateVmRequest) returns (OkResponse);
  rpc CreateLiveVM(Empty) returns (OkResponse);

  rpc MigrateVM(Empty) returns (OkResponse);
  rpc ShutdownVM(Empty) returns (OkResponse);
  rpc StartVM(Empty) returns (OkResponse);
  rpc RemoveVM(Empty) returns (OkResponse);

  rpc GetAllVms(Empty) returns (GetAllVmsResponse);
  rpc GetVmByName(GetVmByNameRequest) returns (Vm);
}